# UniversityFirstSemester

./: README.md
IDATT1003_Prog1_Java/: AreaCalculation.java  CurrencyConverterOutdated.java  Hello world.java
IDATT1003_Prog1_Java/Oving1/: opg1InchToCm.java  opg2ToSek.java  opg3SekToTime.java
IDATT1003_Prog1_Java/Oving10/: Arrangement.java  ArrangementRegister.java  Meny.java  MenyRegister.java  ResturantClient.java  Rett.java  TuristClient.java
IDATT1003_Prog1_Java/Oving11/: Oppave5.docx  Property.java  PropertyRegister.java  UserInterface.java
IDATT1003_Prog1_Java/Oving2/: opg1LeapYear.java  opg2CalcPrice.java
IDATT1003_Prog1_Java/Oving3/: opg1PrintMultiTable.java  opg2PrimeNumbers.java
IDATT1003_Prog1_Java/Oving4/: Currency.java  CurrencyClient.java  DiceGame.java  Player.java
IDATT1003_Prog1_Java/Oving5/: Fraction.java  MinRandom.java
IDATT1003_Prog1_Java/Oving6/: Matrix.java  MatrixClient.java  opg1.java  textAnalysis.java  textClient.java
IDATT1003_Prog1_Java/Oving7/: NyString.java  TextProcessing.java  TextProcessingClient.java
IDATT1003_Prog1_Java/Oving8/: ArbTaker.java  ArbTakerClient.java  Person.java
IDATT1003_Prog1_Java/Oving9/: Oppgaveoversikt.java  Student.java  StudentsClient.java
INFT2503_CPP/Oving1/: CMakeLists.txt  CMakeLists_1.txt  Oving1a.cpp  Oving1b.cpp  temps_1.txt  testfil.cpp
INFT2503_CPP/Oving2/: CMakeLists.txt  Oppg1.cpp  Oppg4.cpp  Oppg5.cpp  Oppg6.cpp  Oving2.h
INFT2503_CPP/Oving3/: CMakeLists.txt  CircleClient.cpp  Oppg4.cpp  circle.hpp  commodity.hpp  commodityClient.cpp
INGT1002_PNS_Python/: requirements.txt
(+27 files in other folders)
